3 fixes - added a Cancel button to dialogs, hide the dice tray on end overlay, and allow the background image to be toggled on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,10 @@ dialog button {
   min-width: 75px;
 }
 
+dialog .cancel-button {
+  color: #777777;
+}
+
 dialog,
 .toolbar,
 .panel,
